--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/responsive-home.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  <title>Restaurant Reviews</title>
-</head>
-
-<body>
-  <header>
-    <nav>
-      <h1><a href="/" tabindex="-1">Restaurant Reviews</a></h1>
-    </nav>
-  </header>
-
-  <main id="maincontent">
-    <section id="map-container" aria-label="Map Area" aria-hidden= "true" tabindex="-1">
-      <div id="map" role="application" aria-hidden="true" role="application" tabindex="-1"></div>
-    </section>
-    <section>
-      <div class="filter-options">
-        <h2>Filter Results</h2>
-        <select id="neighborhoods-select" tabindex="1" aria-label= "Select neighborhood" name="neighborhoods" onchange="updateRestaurants()">
-          <option value="all">All Neighborhoods</option>
-        </select>
-        <select id="cuisines-select" tabindex="2" aria-label="Select cuisine" name="cuisines" onchange="updateRestaurants()">
-          <option value="all">All Cuisines</option>
-        </select>
-      </div>
-      <ul id="restaurants-list" aria-label="Restaurants list"></ul>
-    </section>
-  </main>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-
-
-  <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-  </footer>
-
-</body>
-
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/responsive-home.css">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+        <title>Restaurant Reviews</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <h1><a href="/" tabindex="-1">Restaurant Reviews</a></h1>
+            </nav>
+        </header>
+        <main id="maincontent">
+            <section id="map-container" aria-label="Map Area" aria-hidden= "true" tabindex="-1">
+                <div id="map" role="application" aria-hidden="true" role="application" tabindex="-1"></div>
+            </section>
+            <section>
+                <div class="filter-options">
+                    <h2>Filter Results</h2>
+                    <select id="neighborhoods-select" tabindex="1" aria-label= "Select neighborhood" name="neighborhoods" onchange="updateRestaurants()">
+                        <option value="all">All Neighborhoods</option>
+                    </select>
+                    <select id="cuisines-select" tabindex="2" aria-label="Select cuisine" name="cuisines" onchange="updateRestaurants()">
+                        <option value="all">All Cuisines</option>
+                    </select>
+                </div>
+                <ul id="restaurants-list" aria-label="Restaurants list"></ul>
+            </section>
+        </main>
+        <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+        <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+        <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+        <footer id="footer">
+            Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+        </footer>
+        <!-- Service Worker -->
+        <script>
+            if('serviceWorker' in navigator) {
+              navigator.serviceWorker
+                       .register('sw.js')
+                       .then(function() { console.log("Service Worker Registered"); });
+            }
+        </script>
+    </body>
 </html>
